robot cloud deployment added

--- a/ccrs/src/main/resources/application.properties
+++ b/ccrs/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.hibernate.ddl-auto=none
 # mysql> SET GLOBAL time_zone="America/Los_Angeles";
 # mysql> SELECT @@global.time_zone;
 #spring.datasource.url=jdbc:mysql://ec2-3-131-107-251.us-east-2.compute.amazonaws.com:3306/projmgmtsystem?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://localhost:3306/projmgmtsystem?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://localhost:3306/ccrs?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://54.153.56.196:3306/projmgmtsystem?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://54.153.56.196:3306/ccrs?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://ec2-3-228-9-121.compute-1.amazonaws.com:3306/ccrs?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 # credentials (change to your own mysql setup)
@@ -37,9 +37,9 @@ server.error.whitelabel.enabled=false
 
 #springdoc.swagger-ui.path=/ccrs/docs/swagger-ui.html
 #springfox.documentation.swagger-ui.base-url=/ccrs/docs
-# Note: The final url is http://localhost:8080/ccrs/api-docs
+# Note: The final url is http://54.153.56.196:8080/ccrs/api-docs
 springfox.documentation.swagger.v2.path=/api-docs
-# Note: The swagger url is http://localhost:8080/ccrs/swagger-ui.html
+# Note: The swagger url is http://54.153.56.196:8080/ccrs/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # App Properties
